Updated: corrected color contrast.
Changes to be committed:
	modified:   front-end/src/app/page.module.css
	modified:   front-end/src/components/EventList/eventList.module.css
	modified:   front-end/src/styles/colors.css

--- a/front-end/src/app/page.module.css
+++ b/front-end/src/app/page.module.css
@@ -9,7 +9,7 @@
     }
 
     button {
-        background-color: var(--color--purple);
+        background-color: var(--color--purple-dark);
         color: var(--color--green-light);
     }
 }
